@@ -1,0 +1,33 @@
+/*
+ * Copyright 2013 Jonas Berlin
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.powermock.core.classloader.annotations;
+
+import java.lang.annotation.*;
+
+import org.powermock.core.classloader.ClassPathAdjuster;
+
+/**
+ * Use this annotation to enable adjusting of the class path used by powermock
+ * to locate class files.
+ */
+@Target( { ElementType.TYPE, ElementType.METHOD })
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Inherited
+public @interface UseClassPathAdjuster {
+    Class<? extends ClassPathAdjuster>  value();
+}
